--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Chowdown
-email: your-email@domain.com
-description: The plain text recipe database for hackers
-baseurl: ""
-twitter_username: clarklab
-github_username:  clarklab
+title: Family Recipes
+email: 
+description: Family Recipes
+baseurl: "https://mitch9378.github.io/family-recipes/"
+twitter_username:
+github_username: 
 
 # Build settings
 markdown: kramdown
