update yml config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Family Recipes
 email: 
 description: Family Recipes
-baseurl: "https://mitch9378.github.io/family-recipes/recipes/"
+baseurl: "https://mitch9378.github.io/family-recipes"
 twitter_username:
 github_username: 
 
